# S25_RobotProgramming_Humble

./: .gitignore  README.md
Final_Project/yolo_color_tracker/src/my_robot_interfaces/: CMakeLists.txt  package.xml
Final_Project/yolo_color_tracker/src/my_robot_interfaces/srv/: SetLedColor.srv
Final_Project/yolo_color_tracker/src/yolo_color_tracker/: package.xml
Final_Project/yolo_color_tracker/src/yolo_color_tracker/launch/: camera.launch.py  tracking.launch.py
Final_Project/yolo_color_tracker/src/yolo_color_tracker/yolo_color_tracker/: detection_3d_node.py  detection_node.py
Final_Project/yolo_color_tracker/src/yolo_tracker/: CMakeLists.txt  setup.cfg  setup.py
Final_Project/yolo_color_tracker/src/yolo_tracker/yolo_color_tracker/: color_changer_service.py  tracking_node.py
Final_project/: color_changer_service.py
Lab2/August/: name.txt
Lab2/OKeefe/: Task3.txt  name.txt
Lab2/Pei/: Task#3.txt
Lab2/Schure/: Task 3.txt  name.txt
Lab2/Starkes/: name.txt
Lab2/Zheng/: Answer.txt  draw_star.py  name.txt
Lab3/August/roscourse_ws/install/python_turtle/lib/python_turtle/: action_client  service_client = python_turtle.service_client:mainaction_client
Lab3/August/roscourse_ws/install/python_turtle/share/python_turtle/: package.sh  package.xml
Lab3/August/roscourse_ws/install/turtle_interfaces/include/turtle_interfaces/action/detail/: turtle_to_goals__functions.c
Lab3/August/roscourse_ws/install/turtle_interfaces/share/turtle_interfaces/: package.xml
Lab3/August/roscourse_ws/install/turtle_interfaces/share/turtle_interfaces/action/: TurtleToGoals.action
Lab3/August/roscourse_ws/install/turtle_interfaces/share/turtle_interfaces/cmake/: turtle_interfaces__rosidl_generator_cExport.cmake
Lab3/August/roscourse_ws/install/turtle_interfaces/share/turtle_interfaces/srv/: SetPose.srv
Lab3/August/roscourse_ws/install/webcam/share/webcam/: package.sh
Lab3/August/roscourse_ws/log/: latest_build
Lab3/August/roscourse_ws/src/python_turtle/: setup.py
Lab3/August/roscourse_ws/src/python_turtle/python_turtle/: turtlebot_client.py
Lab3/August/roscourse_ws/src/turtle_interfaces/: CMakeLists.txt
Lab3/August/roscourse_ws/src/webcam/: package.xml  setup.py
Lab3/August/roscourse_ws/src/webcam/webcam/: cam_sub.py
Lab4/OKeefe/: turtlebot_client.py
Lab4/Pei/: Task#1_step#17
Lab4/Schure/: turtlebot_client.py
Lab7/OKeefe/: my_robot.urdf.xacro  my_robot_gazebo_rviz.launch.py
Lab7/Pei/: launch file  urdf.xacro file.
Lab7/Schure/: my_robot.urdf.xacro  my_robot_gazebo_rviz.launch.py
